# Pico-Oscilloscope

./: .gitignore  LICENSE  README.md
app/: package-lock.json  package.json  server.js  test.js
app/public/: index.html  main.css
app/src/: colorSchemeGenerator.js  index.js  meteorites.json  meteorites_large.json  meteorites_medium.json  meteorites_small.json
app/src/components/: APIKey.js  BottomLeftMenu.js  BottomMenu.js  BottomMiddleMenu.js  Channel.js  ClassChart.js  Common.js  ConfigMenu.js  DataTable.js  InfoBox.js  LivePlot.js  Map.js  MassChart.js  MassClassChart.js  MiddleMenu.js  Page.js  PageStyles.js  Plot.js  Socket.js  TogglePanel.js  ToolBar.js  TopMenu.js
docs/: P6 Logo.ai  Serial Protocol.md
scripts/: test_serial.py
src/: CMakeLists.txt  source.c  source.h
